--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.2"
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.2",
+    "resend": "^2.0.0"
   }
 }
