--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '14'
+        
+    - name: Change to backend directory
+      run: cd backend
 
     - name: Install dependencies
       run: npm install
