--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -21,13 +21,14 @@ jobs:
         
 
 
-    - name: Install dependencies
+    - name: Install dependencies backend
       run: npm install
       working-directory: ./backend
 
-    - name: Build
-      run: npm run build
-      working-directory: ./backend
+    - name: Install dependencies frontend
+      run: npm install
+      working-directory: ./frontend
 
-    - name: Run tests
-      run: npm test
+
+
+
