--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -29,6 +29,14 @@ jobs:
       run: npm install
       working-directory: ./frontend
 
+    - name: Install dependencies frontend angular
+      run: npm install -g @angular/cli
+      working-directory: ./frontend
+
+    - name : Build frontend
+      run: ng build
+      working-directory: ./frontend
+
 
 
 
