--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -38,8 +38,8 @@ jobs:
       working-directory: ./frontend
 
     - name: Run tests
-      run: npm test
-      working-directory: ./backend
+      run: npx cypress open
+      working-directory: ./frontend
 
 
 
