--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -38,7 +38,7 @@ jobs:
       working-directory: ./frontend
 
     - name: Run tests
-      run: npx cypress open
+      run: npx cypress run
       working-directory: ./frontend
 
 
