--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
+    "tree-kill": "^1.2.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
